# configurator

./: CMakeLists.txt
include/: config.hpp  detector.h  harris.hpp  random.hpp
samples/: config.json
src/: main.cc
